--- a/P2AndroidTesting/app/src/main/res/layout/activity_main.xml
+++ b/P2AndroidTesting/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="587dp"
-        tools:srcCompat="@drawable/weirdchamp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/weirdchamp" />
 
     <View
         android:id="@+id/divider"
