--- a/P2AndroidTesting/app/src/main/res/layout/activity_main.xml
+++ b/P2AndroidTesting/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="502dp"
         app:srcCompat="@drawable/weirdchamp" />
 
     <View
