--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_create_lobby.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_create_lobby.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:paddingTop="50dp"
         android:text="@string/create_lobby_title" />
 
     <androidx.gridlayout.widget.GridLayout
@@ -22,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:columnCount="2"
         app:rowCount="2"
         app:useDefaultMargins="true">
@@ -57,7 +58,133 @@
     <LinearLayout
         android:id="@+id/cardio_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        tools:visibility="gone">
+
+        <Button
+            android:id="@+id/cardio_button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cardio_button_1" />
+
+        <Button
+            android:id="@+id/cardio_button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cardio_button_2" />
+
+        <Button
+            android:id="@+id/cardio_button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cardio_button_3" />
+
+        <Button
+            android:id="@+id/cardio_button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cardio_button_4" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/strength_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        tools:visibility="gone">
+
+        <Button
+            android:id="@+id/strength_button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/strength_button_1" />
+
+        <Button
+            android:id="@+id/strength_button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/strength_button_2" />
+
+        <Button
+            android:id="@+id/strength_button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/strength_button_3" />
+
+        <Button
+            android:id="@+id/strength_button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/strength_button_4" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/blitz_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        tools:visibility="gone">
+
+        <Button
+            android:id="@+id/blitz_button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/blitz_button_1" />
+
+        <Button
+            android:id="@+id/blitz_button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/blitz_button_2" />
+
+        <Button
+            android:id="@+id/blitz_button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/blitz_button_3" />
+
+        <Button
+            android:id="@+id/blitz_button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/blitz_button_4" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fat_burn_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        tools:visibility="gone">
+
+        <Button
+            android:id="@+id/fat_burn_button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fat_burn_button_1" />
+
+        <Button
+            android:id="@+id/fat_burn_button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fat_burn_button_2" />
+
+        <Button
+            android:id="@+id/fat_burn_button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fat_burn_button_3" />
+
+        <Button
+            android:id="@+id/fat_burn_button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fat_burn_button_4" />
+    </LinearLayout>
 
 </RelativeLayout>
