--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_create_lobby.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_create_lobby.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:columnCount="2"
         app:rowCount="2"
         app:useDefaultMargins="true">
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        tools:visibility="gone">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/cardio_button1"
@@ -94,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        tools:visibility="gone">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/strength_button1"
@@ -127,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        tools:visibility="gone">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/blitz_button1"
@@ -160,7 +160,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        tools:visibility="gone">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/fat_burn_button1"
