--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
@@ -33,8 +33,26 @@
       android:id="@+id/imageView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:srcCompat="@drawable/ic_launcher_background"
-      tools:layout_editor_absoluteY="257dp" />
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/ic_launcher_background" />
+
+
+  <androidx.drawerlayout.widget.DrawerLayout
+      xmlns:android="http://schemas.android.com/tools"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:menu="@menu/friends_list"
+        android:layout_gravity="start">
+    </LinearLayout>
+
+
+  </androidx.drawerlayout.widget.DrawerLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
