--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
-
-
-
-  <androidx.drawerlayout.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       xmlns:app="http://schemas.android.com/apk/res-auto"
-      tools:context=".LobbyWorkoutActivity">
+      tools:context=".LobbyActivity">
 
   <LinearLayout
       android:layout_width="match_parent"
@@ -59,8 +53,7 @@
       android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/friends_list"
-        android:layout_gravity="end"
-          >
+        android:layout_gravity="end">
   </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
