--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
-
-
-
   <androidx.drawerlayout.widget.DrawerLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       xmlns:app="http://schemas.android.com/apk/res-auto"
-      tools:context=".LobbyWorkoutActivity">
+      tools:context=".LobbyActivity">
 
   <LinearLayout
       android:layout_width="match_parent"
@@ -27,6 +21,7 @@
         android:text="Select Workout"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
+        android:onClick="onSelectWorkoutClick"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
