--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
@@ -60,6 +60,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_password_field"
+        app:strokeColor="#00FF0404"
         tools:text="@string/signup_button" />
 
     <Button
