--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,7 @@
         android:layout_height="38dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="28dp"
+        android:background="@drawable/button1"
         android:onClick="onSignUpClick"
         android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/login_button"
@@ -69,6 +70,7 @@
         android:layout_height="38dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="50dp"
+        android:background="@drawable/button1"
         android:onClick="onLoginNextClick"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
