--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
@@ -59,8 +59,9 @@
         android:id="@+id/button5"
         android:layout_width="234dp"
         android:layout_height="56dp"
-        android:text="Ready Up"
         android:background="@drawable/button1"
+        android:onClick="onReadyUpClick"
+        android:text="Ready Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
