Added webcam features

--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby_workout.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby_workout.xml
@@ -13,11 +13,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    <VideoView
-        android:id="@+id/exercise_video"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <VideoView
+            android:id="@+id/exercise_video"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </FrameLayout>
+
+    <com.p2aau.virtualworkoutv2.openvcall.ui.layout.GridVideoViewContainer
+        android:id="@+id/grid_video_view_container_own"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:layout_constraintHeight_percent="0.25" />
+
+    <ViewStub
+        android:id="@id/small_video_view_dock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="60dp"
+        android:inflatedId="@id/small_video_view_dock"
+        android:layout="@layout/agora_small_video_view_dock" />
 
     <TextView
         android:id="@+id/text_view_countdown"
