--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".InbetweenWorkoutsActivity">
 
     <TextView
         android:id="@+id/text_view_countdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
         android:text="00:00" />
 
     <com.p2aau.virtualworkoutv2.openvcall.ui.layout.GridVideoViewContainer
@@ -16,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:layout_constraintHeight_percent="0.25" />
+        app:layout_constraintHeight_percent="0.60" />
 
     <ViewStub
         android:id="@id/small_video_view_dock"
@@ -26,4 +29,13 @@
         android:layout_marginTop="60dp"
         android:inflatedId="@id/small_video_view_dock"
         android:layout="@layout/agora_small_video_view_dock" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="96dp"
+        android:text="@string/congrats" />
+
 </RelativeLayout>
