--- a/VirtualWorkoutV2/app/src/main/res/values/colors.xml
+++ b/VirtualWorkoutV2/app/src/main/res/values/colors.xml
@@ -12,6 +12,12 @@
     <color name="xdBlueLight">#68A9C5</color>
     <color name="xdBlueDark">#6881C5</color>
 
+    <!-- Workout colors -->
+    <color name="cardio">#68A9C5</color>
+    <color name="strength">#DEBFBF</color>
+    <color name="blitz">#DEDEBF</color>
+    <color name="fat_burn">#DED3BF</color>
+
     <!-- AGORA -->
     <color name="agora_blue">#006AD8</color>
 
