--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_choose_workout.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_choose_workout.xml
@@ -41,12 +41,12 @@
             app:srcCompat="@drawable/strength" />
 
         <ImageView
-            android:id="@+id/blitz"
+            android:id="@+id/yoga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_column="0"
             app:layout_row="1"
-            app:srcCompat="@drawable/blitz" />
+            app:srcCompat="@drawable/yoga" />
 
         <ImageView
             android:id="@+id/fat_burn"
