--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
@@ -56,13 +56,12 @@
         android:layout_marginTop="28dp"
         android:background="@drawable/button1"
         android:onClick="onSignUpClick"
-        android:text="Button"
+        android:text="@string/signup_button"
         app:layout_constraintEnd_toStartOf="@+id/login_button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_password_field"
-        app:strokeColor="#00FF0404"
-        tools:text="@string/signup_button" />
+        app:strokeColor="#00FF0404" />
 
     <Button
         android:id="@+id/login_button"
@@ -72,11 +71,10 @@
         android:layout_marginEnd="50dp"
         android:background="@drawable/button1"
         android:onClick="onLoginNextClick"
-        android:text="Button"
+        android:text="@string/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/goto_signup_button"
-        app:layout_constraintTop_toBottomOf="@+id/login_password_field"
-        tools:text="@string/login_button" />
+        app:layout_constraintTop_toBottomOf="@+id/login_password_field" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
