--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_end_screen.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_end_screen.xml
@@ -36,7 +36,8 @@
             android:background="@drawable/button1"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="@string/EndScreenNext" />
+            android:text="@string/EndScreenNext"
+            android:onClick="onNextClick"/>
 
         <com.p2aau.virtualworkoutv2.openvcall.ui.layout.GridVideoViewContainer
             android:id="@+id/grid_video_view_container_own"
