--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby_workout.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby_workout.xml
@@ -5,37 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <TextView
+        android:id="@+id/text_view_exercise_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_below="@id/text_view_countdown"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:text="Exercise description..."
+        android:textAlignment="center"
+        android:textColor="@color/black_light" />
 
-        <VideoView
-            android:id="@+id/exercise_video"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <VideoView
+        android:id="@+id/exercise_video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text_view_exercise_description" />
 
-        <TextView
-            android:id="@+id/text_view_countdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="00:00"
-            android:textColor="@android:color/white"
-            android:textSize="60sp" />
-
-        <TextView
-            android:id="@+id/text_view_exercise_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Exercise description..."
-            android:layout_gravity="center"
-            android:textColor="@android:color/white" />
-
-    </FrameLayout>
+    <TextView
+        android:id="@+id/text_view_countdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="00:00"
+        android:textAlignment="center"
+        android:textColor="@color/black_light"
+        android:textSize="60sp" />
 
     <com.p2aau.virtualworkoutv2.openvcall.ui.layout.GridVideoViewContainer
         android:id="@+id/grid_video_view_container_own"
