--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
@@ -45,8 +45,8 @@
         android:id="@+id/next_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/textview4"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
         android:gravity="center"
         android:text="@string/next_up"
         android:textSize="20sp" />
@@ -62,7 +62,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/progressText"
+        android:id="@+id/progress_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/next_exercise"
